kubernetes/ingress-vouch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reporting
  namespace: mytardis
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: X-Vouch-User
    nginx.ingress.kubernetes.io/auth-signin: https://vouch.mytardis.com/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
    nginx.ingress.kubernetes.io/auth-url: https://vouch.mytardis.com/validate
spec:
  rules:
  - host: kibana.mytardis.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
